--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ maintenance = { status = "actively-developed" }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
 wgpu = "0.6"
 zerocopy = "0.3"
 image = "0.23"
