--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,14 @@ maintenance = { status = "actively-developed" }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["font-fallback"]
+default = ["font-fallback", "gl-renderer", "textures"]
 font-fallback = []
+gl-renderer = ["surfman", "gl32"]
+textures = ["image"]
 
 [dependencies]
 baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
-image = "0.23"
+raw-window-handle = "0.3.3"
+image = { version = "0.23", optional = true }
+surfman = { version = "0.3.0", default-features = false, features = ["sm-raw-window-handle", "sm-wayland-default", "sm-x11"], optional = true }
+gl32 = { version = "0.2.0", optional = true }
