--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,14 @@ maintenance = { status = "actively-developed" }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["font-fallback"]
+default = ["font-fallback", "wgpu-renderer"]
 font-fallback = []
+wgpu-renderer = ["wgpu", "wgpu_glyph"]
 
 [dependencies]
 baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
-wgpu = "0.6"
-wgpu_glyph = "0.10"
+wgpu = { version = "0.6", optional = true }
+wgpu_glyph = { version = "0.10", optional = true }
 zerocopy = "0.3"
 image = "0.23"
 fnv = "1.0.7"
