--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,16 +31,17 @@ wgpu-renderer = ["wgpu", "wgpu_glyph"]
 baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
 wgpu = { version = "0.6", optional = true }
 wgpu_glyph = { version = "0.10", optional = true }
+glam = "0.11"
 zerocopy = "0.3"
 image = "0.23"
-fnv = "1.0.7"
 anyhow = "1.0"
 futures = "0.3"
 raw-window-handle = "0.3"
-guillotiere = "0.6.0"
+guillotiere = "0.6"
+lyon = "0.16.2"
 
 [build-dependencies]
 anyhow = "1.0"
 fs_extra = "1.2"
 glob = "0.3"
-shaderc = "0.6"
+shaderc = "0.7"
