--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2021"
 
 [workspace]
 members = [
-    "examples/hello-world"
+    "examples/hello-world",
 ]
 
 [dependencies]
-gl = { version = "0.14" }
 keyboard-types = { version = "0.6.1", default-features = false }
-nvg = "0.5"
+nanovg = { version = "1.0", default-features = false, features = ["gl3"] }
+glow = "0.11"
+raw-window-handle = "0.4"
 log = "0.4"
 fnv = "1.0"
