--- a/examples/hello-world/Cargo.toml
+++ b/examples/hello-world/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-goldenrod = { path = "../../" }
+firewheel = { path = "../../" }
 raw-gl-context = { version = "0.1" }
 gl = { version = "0.14" }
 raw-window-handle = "0.4"
