--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Billy Messenger <BillyDM@tutamail.com>"]
 license = "MIT OR Apache-2.0"
 keywords = ["ui", "gui", "barebones", "performance"]
 categories = ["gui"]
-description = "(WIP) A low-level, barebones, \"DIY\" toolkit for making high-performance GUIs"
+description = "(WIP) A low-level, barebones, \"DIY\" toolkit aimed at making high-performance GUIs"
 documentation = "https://docs.rs/firewheel"
 repository = "https://github.com/MeadowlarkDAW/firewheel"
 readme = "README.md"
