--- a/examples/test-app/Cargo.toml
+++ b/examples/test-app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello-world"
+name = "test-app"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -9,7 +9,6 @@ publish = false
 [dependencies]
 firewheel = { path = "../../" }
 raw-gl-context = { version = "0.1" }
-gl = { version = "0.14" }
 raw-window-handle = "0.4"
 winit = "0.27"
 env_logger = "0.9"
