--- a/examples/test-app/Cargo.toml
+++ b/examples/test-app/Cargo.toml
@@ -8,8 +8,8 @@ publish = false
 
 [dependencies]
 firewheel = { path = "../../" }
-raw-gl-context = { version = "0.1" }
-raw-window-handle = "0.4"
+glutin = "0.30"
 winit = "0.27"
+raw-window-handle = "0.5"
 env_logger = "0.9"
 log = "0.4"
