--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ members = [
 ]
 
 [features]
-default = ["glutin", "image-loading"]
+default = ["winit", "glutin", "image-loading"]
 image-loading = ["femtovg/image-loading"]
 
 [dependencies]
@@ -27,5 +27,6 @@ keyboard-types = { version = "0.6.1", default-features = false }
 #nanovg = { version = "1.0", default-features = false, features = ["gl3"] }
 femtovg = { git = "https://github.com/femtovg/femtovg", rev = "20dc7ef142004736f1ba1c626dd9c5bb556dde14", default-features = false }
 glutin = { version = "0.30", optional = true }
+winit = { version = "0.27", optional = true }
 log = "0.4"
 fnv = "1.0"
