--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,6 @@ keyboard-types = { version = "0.6.1", default-features = false }
 femtovg = { git = "https://github.com/femtovg/femtovg", rev = "20dc7ef142004736f1ba1c626dd9c5bb556dde14", default-features = false }
 glutin = { version = "0.30", optional = true }
 winit = { version = "0.27", optional = true }
+crossbeam-channel = "0.5"
 log = "0.4"
 fnv = "1.0"
