--- a/examples/test-app/Cargo.toml
+++ b/examples/test-app/Cargo.toml
@@ -11,5 +11,6 @@ firewheel = { path = "../../" }
 glutin = "0.30"
 winit = "0.27"
 raw-window-handle = "0.5"
+crossbeam-channel = "0.5"
 env_logger = "0.9"
 log = "0.4"
